: add login credintials

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "1.0.0",
     "description": "Aesthetic Operations Website",
 
-    "author": "Your Name",
+    "author": "Anas",
     "license": "MIT",
     "private": true,
     "main": "index.html",
